# belief-propagation

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE.md  README.md  belief_network_wrapper.py  fix_percents.py  fix_rows.py  generate_bayesian_network_from_snap.py  generate_belief_network.py  generate_belief_network_mtx_files.py  generate_row.py  load_modules.sh  pad_mtx_nodes_file.py  run_build.sh  submit_job.sh  submit_profile.sh
Debug-parser/: makefile  sources.mk
Debug-parser/src/bnf-parser/: subdir.mk
Debug-parser/src/edge/: subdir.mk
Debug-parser/src/graph/: subdir.mk
Debug-parser/src/node/: subdir.mk
bnf-parser/: Lexer.c  Lexer.h  Lexer.l  Parser.c  Parser.h  Parser.y  expression.h  main.c  test
cmake/Modules/: FindOpenACC.cmake  FindPackageMessage.cmake
doc/: CMakeLists.txt  Doxyfile.in
scripts/: hyperthreading.sh  run_benchmarks.sh  run_cuda_benchmarks.sh  run_cuda_edge_benchmarks.sh  run_openmp_benchmarks.sh  run_openmp_benchmarks_callgrind.sh  submit_all_edge_profile.sh  submit_all_loopy_edge.sh  submit_all_loopy_node.sh  submit_all_node_profile.sh  submit_all_non_loopy.sh
scripts/loopy_edge/: submit_loopy_edge_c.sh  submit_loopy_edge_cuda.sh  submit_loopy_edge_openmp.sh
scripts/loopy_edge_profile/: submit_loopy_edge_cuda.sh  submit_loopy_edge_openacc.sh
scripts/loopy_node/: submit_loopy_node_c.sh  submit_loopy_node_cuda_kernels.sh  submit_loopy_node_openacc.sh  submit_loopy_node_openmp.sh
scripts/loopy_node_profile/: submit_loopy_node_cuda.sh  submit_loopy_node_cuda_kernels.sh  submit_loopy_node_openacc.sh
scripts/non_loopy/: submit_non_loopy_c.sh  submit_non_loopy_openacc.sh
scripts/page_rank/: page_rank_input_converter.py
src/: belief-propagation.cu  constants.h
src/benchmark_files/: 10_20.bif.edges.mtx  10_20.bif.nodes.mtx  CMakeLists.txt  dog-edges.txt  dog-nodes.txt  dog.xml  small_page_rank.txt  test.bif.xml  test_10_beliefs.edges.mtx  test_10_beliefs.nodes.mtx  viterbi.xml
src/benchmark_files/xml/: bf_1000_2000_1.xml  bf_1000_2000_2.xml  bf_1000_2000_3.xml  bf_2000_4000_1.xml  bf_2000_4000_2.xml  bf_2000_4000_3.xml  bf_5000_10000_2.xml  bf_5000_10000_3.xml
src/bnf-parser/: CMakeLists.txt  Lexer.c  Lexer.h  Lexer.l  Makefile  Parser.c  Parser.h  Parser.y  bnf-wrapper.c  bnf-wrapper.h  carpo.bif  dog.bif  expression.c  expression.h  main.c  test
src/bnf-xml-parser/: CMakeLists.txt  bnf-xml-wrapper.c  bnf-xml-wrapper.h  main.c  xml-expression.c  xml-expression.h
src/c_benchmark/: CMakeLists.txt  loopy-edge-belief-propagation-no-work-queue.c  loopy-edge-belief-propagation.c  loopy-node-belief-propagation-no-work-queue.c  loopy-node-belief-propagation.c  main.c  non-loopy-belief-propagation.c
src/csr-parser/: csr-parser.c  csr-parser.h  csr-wrapper.c  csr-wrapper.h
src/cuda_benchmark/: CMakeLists.txt  belief-propagation-edge-multiple-devices.cu  belief-propagation-edge-no-work-queue.cu  belief-propagation-edge-openmpi.cu  belief-propagation-edge-streaming.cu  belief-propagation-edge.cu  belief-propagation-node-multiple-devices.cu  belief-propagation-node-no-work-queue.cu  belief-propagation-node-openmpi.cu  belief-propagation-node-partitioned.cu  belief-propagation-node-streaming.cu  belief-propagation-node.cu  belief-propagation.cu  belief-propagation.hpp
src/cuda_benchmark_kernels/: CMakeLists.txt  belief-propagation-kernels-benchmark.cu  belief-propagation-kernels.cu  belief-propagation-kernels.hpp
src/edge/: edge.c  edge.h
src/example-belief-propagation/: CMakeLists.txt  example-belief-propagation.c
src/graph/: graph.c  graph.h
src/node/: node.c  node.h
src/openacc_benchmark/: CMakeLists.txt  loopy-edge-belief-propagation.c  loopy-node-belief-propagation.c  main.c  non-loopy-belief-propagation.c
src/openmp_benchmark/: CMakeLists.txt  loopy-edge-belief-propagation-no-work-queue.c  loopy-edge-belief-propagation.c  loopy-node-belief-propagation-no-work-queue.c  loopy-node-belief-propagation.c  main.c
src/sample_openmpi_with_cuda/: CMakeLists.txt  CUDA_Aware_MPI.cpp  CUDA_Normal_MPI.cpp  Device.cu  Host.cpp  Input.cpp  Jacobi.cpp  Jacobi.hpp  nccl_multiple_processes_multiple_devices.cu  nccl_multiple_processes_one_device_per.cu  nccl_single_process_single_thread_many_devices.cu
src/snap-parser/: CMakeLists.txt  main.c  snap-parser.c  snap-parser.h
test/: CMakeLists.txt  test_csr.c  test_large_expressions.c  test_medium_expressions.c  test_page_rank.c  test_simple_expression.c  test_small_expressions.c  test_snap_files.c  test_very_large_expressions.c  test_viterbi.c  test_xml_expressions.c
