cmake_minimum_required(VERSION 2.8)
find_package(FLEX REQUIRED)
find_package(BISON REQUIRED)

set(CMAKE_C_FLAGS_RELEASE "-O3")

project(test-expression)
BISON_TARGET(Parser Parser.y ${CMAKE_CURRENT_SOURCE_DIR}/Parser.c)
FLEX_TARGET(Lexer Lexer.l ${CMAKE_CURRENT_SOURCE_DIR}/Lexer.c )
ADD_FLEX_BISON_DEPENDENCY(Lexer Parser)

configure_file(dog.bif dog.bif COPYONLY)
configure_file(alarm.bif alarm.bif COPYONLY)
configure_file(carpo.bif carpo.bif COPYONLY)
configure_file(hailfinder.bif hailfinder.bif COPYONLY)
configure_file(insurance.bif insurance.bif COPYONLY)
configure_file(Barley.bif Barley.bif COPYONLY)
configure_file(Diabetes.bif Diabetes.bif COPYONLY)
configure_file(Link.bif Link.bif COPYONLY)
configure_file(Mildew.bif Mildew.bif COPYONLY)
configure_file(Water.bif Water.bif COPYONLY)

configure_file(large/hepar2.bif large/hepar2.bif COPYONLY)
configure_file(large/win95pts.bif large/win95pts.bif COPYONLY)

configure_file(medium/alarm.bif medium/alarm.bif COPYONLY)
configure_file(medium/barley.bif medium/barley.bif COPYONLY)
configure_file(medium/child.bif medium/child.bif COPYONLY)
configure_file(medium/hailfinder.bif medium/hailfinder.bif COPYONLY)
configure_file(medium/insurance.bif medium/insurance.bif COPYONLY)
configure_file(medium/mildew.bif medium/mildew.bif COPYONLY)
configure_file(medium/water.bif medium/water.bif)

configure_file(small/asia.bif small/asia.bif COPYONLY)
configure_file(small/cancer.bif small/cancer.bif COPYONLY)
configure_file(small/earthquake.bif small/earthquake.bif COPYONLY)
configure_file(small/sachs.bif small/sachs.bif COPYONLY)
configure_file(small/survey.bif small/survey.bif COPYONLY)

configure_file(very_large/andes.bif very_large/andes.bif COPYONLY)
configure_file(very_large/diabetes.bif very_large/diabetes.bif COPYONLY)
configure_file(very_large/link.bif very_large/link.bif COPYONLY)
configure_file(very_large/munin1.bif very_large/munin1.bif COPYONLY)
configure_file(very_large/munin2.bif very_large/munin2.bif COPYONLY)
configure_file(very_large/munin3.bif very_large/munin3.bif COPYONLY)
configure_file(very_large/munin4.bif very_large/munin4.bif COPYONLY)
configure_file(very_large/pathfinder.bif very_large/pathfinder.bif COPYONLY)
configure_file(very_large/pigs.bif very_large/pigs.bif COPYONLY)

include_directories(${CMAKE_CURRENT_BINARY_DIR})
include_directories(${CMAKE_CURRENT_SOURCE_DIR})
add_executable(main main.c ${CMAKE_CURRENT_SOURCE_DIR}/Parser.c ${CMAKE_CURRENT_SOURCE_DIR}/Lexer.c expression.c ../graph/graph.c ../edge/edge.c ../node/node.c)