project(cuda_benchmark)

cmake_minimum_required(VERSION 2.8)

find_package(LibXml2 REQUIRED)
find_package(CUDA REQUIRED)
find_package(Threads REQUIRED)
FIND_PACKAGE(MPI REQUIRED)

if (CMAKE_COMPILER_IS_GNUCC AND CMAKE_CXX_COMPILER_VERSION VERSION_GREATER 5)
    set(CUDA_HOST_COMPILER "gcc-5")
endif()
set(CMAKE_C_FLAGS_RELEASE "-O3 -march=native -DNDEBUG")
set(CMAKE_CXX_FLAGS_RELEASE "-O3 -march=native -DNDEBUG")
set(CUDA_NVCC_FLAGS_DEBUG "-g -G")
set(CUDA_NVCC_FLAGS "${CUDA_NVCC_FLAGS} -lineinfo -gencode arch=compute_35,code=sm_35 -use_fast_math")


cuda_add_executable(cuda_node_benchmark belief-propagation-node.cu belief-propagation.cu ../bnf-xml-parser/bnf-xml-wrapper.c ../bnf-xml-parser/xml-expression.c ../bnf-parser/bnf-wrapper.c ../bnf-parser/expression.c ../bnf-parser/Lexer.c ../bnf-parser/Parser.c ../graph/graph.c ../snap-parser/snap-parser.c  ../csr-parser/csr-parser.c)
cuda_add_executable(cuda_node_no_work_queue_benchmark belief-propagation-node-no-work-queue.cu belief-propagation.cu ../bnf-xml-parser/bnf-xml-wrapper.c ../bnf-xml-parser/xml-expression.c ../bnf-parser/bnf-wrapper.c ../bnf-parser/expression.c ../bnf-parser/Lexer.c ../bnf-parser/Parser.c ../graph/graph.c ../snap-parser/snap-parser.c  ../csr-parser/csr-parser.c)
cuda_add_executable(cuda_node_streaming_benchmark belief-propagation-node-streaming.cu belief-propagation.cu ../bnf-xml-parser/bnf-xml-wrapper.c ../bnf-xml-parser/xml-expression.c ../bnf-parser/bnf-wrapper.c ../bnf-parser/expression.c ../bnf-parser/Lexer.c ../bnf-parser/Parser.c ../graph/graph.c ../snap-parser/snap-parser.c  ../csr-parser/csr-parser.c)
cuda_add_executable(cuda_node_multiple_devices_benchmark belief-propagation-node-multiple-devices.cu belief-propagation.cu ../bnf-xml-parser/bnf-xml-wrapper.c ../bnf-xml-parser/xml-expression.c ../bnf-parser/bnf-wrapper.c ../bnf-parser/expression.c ../bnf-parser/Lexer.c ../bnf-parser/Parser.c ../graph/graph.c ../snap-parser/snap-parser.c  ../csr-parser/csr-parser.c)
cuda_add_executable(cuda_node_openmpi_benchmark belief-propagation-node-openmpi.cu belief-propagation.cu ../bnf-xml-parser/bnf-xml-wrapper.c ../bnf-xml-parser/xml-expression.c ../bnf-parser/bnf-wrapper.c ../bnf-parser/expression.c ../bnf-parser/Lexer.c ../bnf-parser/Parser.c ../graph/graph.c ../snap-parser/snap-parser.c  ../csr-parser/csr-parser.c)
cuda_add_executable(cuda_edge_benchmark belief-propagation-edge.cu belief-propagation.cu ../bnf-xml-parser/bnf-xml-wrapper.c ../bnf-xml-parser/xml-expression.c ../bnf-parser/bnf-wrapper.c ../bnf-parser/expression.c ../bnf-parser/Lexer.c ../bnf-parser/Parser.c ../graph/graph.c ../snap-parser/snap-parser.c  ../csr-parser/csr-parser.c)
cuda_add_executable(cuda_edge_no_work_queue_benchmark belief-propagation-edge-no-work-queue.cu belief-propagation.cu ../bnf-xml-parser/bnf-xml-wrapper.c ../bnf-xml-parser/xml-expression.c ../bnf-parser/bnf-wrapper.c ../bnf-parser/expression.c ../bnf-parser/Lexer.c ../bnf-parser/Parser.c ../graph/graph.c ../snap-parser/snap-parser.c  ../csr-parser/csr-parser.c)
cuda_add_executable(cuda_edge_streaming_benchmark belief-propagation-edge-streaming.cu belief-propagation.cu ../bnf-xml-parser/bnf-xml-wrapper.c ../bnf-xml-parser/xml-expression.c ../bnf-parser/bnf-wrapper.c ../bnf-parser/expression.c ../bnf-parser/Lexer.c ../bnf-parser/Parser.c ../graph/graph.c ../snap-parser/snap-parser.c  ../csr-parser/csr-parser.c)
cuda_add_executable(cuda_edge_multiple_devices_benchmark belief-propagation-edge-multiple-devices.cu belief-propagation.cu ../bnf-xml-parser/bnf-xml-wrapper.c ../bnf-xml-parser/xml-expression.c ../bnf-parser/bnf-wrapper.c ../bnf-parser/expression.c ../bnf-parser/Lexer.c ../bnf-parser/Parser.c ../graph/graph.c ../snap-parser/snap-parser.c  ../csr-parser/csr-parser.c)
cuda_add_executable(cuda_edge_openmpi_benchmark belief-propagation-edge-openmpi.cu belief-propagation.cu ../bnf-xml-parser/bnf-xml-wrapper.c ../bnf-xml-parser/xml-expression.c ../bnf-parser/bnf-wrapper.c ../bnf-parser/expression.c ../bnf-parser/Lexer.c ../bnf-parser/Parser.c ../graph/graph.c ../snap-parser/snap-parser.c  ../csr-parser/csr-parser.c)
include_directories(SYSTEM ${MPI_INCLUDE_PATH} ${CUDA_INCLUDE_DIRS} ${LIBXML2_INCLUDE_DIR})
target_link_libraries(cuda_node_benchmark ${LIBXML2_LIBRARIES} ${CMAKE_THREAD_LIBS_INIT} ${MPI_CXX_LIBRARIES} m)
target_link_libraries(cuda_node_no_work_queue_benchmark ${LIBXML2_LIBRARIES} ${CMAKE_THREAD_LIBS_INIT} ${MPI_CXX_LIBRARIES} m)
target_link_libraries(cuda_node_streaming_benchmark ${LIBXML2_LIBRARIES} ${CMAKE_THREAD_LIBS_INIT} ${MPI_CXX_LIBRARIES} m)
target_link_libraries(cuda_node_multiple_devices_benchmark ${LIBXML2_LIBRARIES} ${CMAKE_THREAD_LIBS_INIT} ${MPI_CXX_LIBRARIES} m)
target_link_libraries(cuda_node_openmpi_benchmark ${LIBXML2_LIBRARIES} ${CMAKE_THREAD_LIBS_INIT} ${MPI_CXX_LIBRARIES} m)
target_link_libraries(cuda_edge_benchmark ${LIBXML2_LIBRARIES} ${CMAKE_THREAD_LIBS_INIT} ${MPI_CXX_LIBRARIES} m)
target_link_libraries(cuda_edge_no_work_queue_benchmark ${LIBXML2_LIBRARIES} ${CMAKE_THREAD_LIBS_INIT} ${MPI_CXX_LIBRARIES} m)
target_link_libraries(cuda_edge_streaming_benchmark ${LIBXML2_LIBRARIES} ${CMAKE_THREAD_LIBS_INIT} ${MPI_CXX_LIBRARIES} m)
target_link_libraries(cuda_edge_multiple_devices_benchmark ${LIBXML2_LIBRARIES} ${CMAKE_THREAD_LIBS_INIT} ${MPI_CXX_LIBRARIES} m)
target_link_libraries(cuda_edge_openmpi_benchmark ${LIBXML2_LIBRARIES} ${CMAKE_THREAD_LIBS_INIT} ${MPI_CXX_LIBRARIES} m)
